exception handling Frontend